src/qt/libqjsonarray.bf

	
	public QJsonArray__iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QJsonArray__iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QJsonArray__iterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QJsonArray__iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QJsonArray__iterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QJsonArray__iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public QJsonArray__iterator OperatorPlus(int32 j)
	{
		return CQt.QJsonArray__iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QJsonArray__iterator OperatorMinus(int32 j)
	{
		return CQt.QJsonArray__iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQJsonArrayiterator(QJsonArray__iterator j)
	{
		return CQt.QJsonArray__iterator_OperatorMinusWithQJsonArrayiterator(this.nativePtr, j);
	}
	
}
extension CQt
{
	[LinkName("QJsonArray__iterator_new")]
	public static extern void* QJsonArray__iterator_new(QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_new2")]
	public static extern void* QJsonArray__iterator_new2();
	[LinkName("QJsonArray__iterator_new3")]
	public static extern void* QJsonArray__iterator_new3(void* array, int32 index);
	[LinkName("QJsonArray__iterator_new4")]
	public static extern void* QJsonArray__iterator_new4(QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorAssign")]
	public static extern void QJsonArray__iterator_OperatorAssign(void* c_this, QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorMultiply")]
	public static extern void QJsonArray__iterator_OperatorMultiply(void* c_this);
	[LinkName("QJsonArray__iterator_OperatorMinusGreater")]
	public static extern void* QJsonArray__iterator_OperatorMinusGreater(void* c_this);
	[LinkName("QJsonArray__iterator_OperatorMinusGreater2")]
	public static extern void* QJsonArray__iterator_OperatorMinusGreater2(void* c_this);
	[LinkName("QJsonArray__iterator_OperatorSubscript")]
	public static extern void QJsonArray__iterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QJsonArray__iterator_OperatorEqual")]
	public static extern bool QJsonArray__iterator_OperatorEqual(void* c_this, QJsonArray__iterator* o);
	[LinkName("QJsonArray__iterator_OperatorNotEqual")]
	public static extern bool QJsonArray__iterator_OperatorNotEqual(void* c_this, QJsonArray__iterator* o);
	[LinkName("QJsonArray__iterator_OperatorLesser")]
	public static extern bool QJsonArray__iterator_OperatorLesser(void* c_this, QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorLesserOrEqual")]
	public static extern bool QJsonArray__iterator_OperatorLesserOrEqual(void* c_this, QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorGreater")]
	public static extern bool QJsonArray__iterator_OperatorGreater(void* c_this, QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorGreaterOrEqual")]
	public static extern bool QJsonArray__iterator_OperatorGreaterOrEqual(void* c_this, QJsonArray__iterator* other);
	[LinkName("QJsonArray__iterator_OperatorEqualWithQJsonArrayconstIterator")]
	public static extern bool QJsonArray__iterator_OperatorEqualWithQJsonArrayconstIterator(void* c_this, QJsonArray__const_iterator* o);
	[LinkName("QJsonArray__iterator_OperatorNotEqualWithQJsonArrayconstIterator")]
	public static extern bool QJsonArray__iterator_OperatorNotEqualWithQJsonArrayconstIterator(void* c_this, QJsonArray__const_iterator* o);
	[LinkName("QJsonArray__iterator_OperatorLesserWithOther")]
	public static extern bool QJsonArray__iterator_OperatorLesserWithOther(void* c_this, QJsonArray__const_iterator* other);
	[LinkName("QJsonArray__iterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QJsonArray__iterator_OperatorLesserOrEqualWithOther(void* c_this, QJsonArray__const_iterator* other);
	[LinkName("QJsonArray__iterator_OperatorGreaterWithOther")]
	public static extern bool QJsonArray__iterator_OperatorGreaterWithOther(void* c_this, QJsonArray__const_iterator* other);
	[LinkName("QJsonArray__iterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QJsonArray__iterator_OperatorGreaterOrEqualWithOther(void* c_this, QJsonArray__const_iterator* other);
	[LinkName("QJsonArray__iterator_OperatorPlusPlus")]
	public static extern QJsonArray__iterator* QJsonArray__iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QJsonArray__iterator_OperatorPlusPlusWithInt")]
	public static extern QJsonArray__iterator QJsonArray__iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonArray__iterator_OperatorMinusMinus")]
	public static extern QJsonArray__iterator* QJsonArray__iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QJsonArray__iterator_OperatorMinusMinusWithInt")]
	public static extern QJsonArray__iterator QJsonArray__iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonArray__iterator_OperatorPlusAssign")]
	public static extern QJsonArray__iterator* QJsonArray__iterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QJsonArray__iterator_OperatorMinusAssign")]
	public static extern QJsonArray__iterator* QJsonArray__iterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QJsonArray__iterator_OperatorPlus")]
	public static extern QJsonArray__iterator QJsonArray__iterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QJsonArray__iterator_OperatorMinus")]
	public static extern QJsonArray__iterator QJsonArray__iterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QJsonArray__iterator_OperatorMinusWithQJsonArrayiterator")]
	public static extern int32 QJsonArray__iterator_OperatorMinusWithQJsonArrayiterator(void* c_this, QJsonArray__iterator j);
	/// Delete this object from C++ memory
	[LinkName("QJsonArray__iterator_Delete")]
	public static extern void QJsonArray__iterator_Delete(void* self);
}
public class QJsonArray__const_iterator
{
	protected void* nativePtr;
	
	public this(QJsonArray__const_iterator* other)
	{
		this.nativePtr = CQt.QJsonArray__const_iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QJsonArray__const_iterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QJsonArray__const_iterator* other)
	{
		CQt.QJsonArray__const_iterator_OperatorAssign(this.nativePtr, other);
	}
	
	public void OperatorMultiply()
	{
		CQt.QJsonArray__const_iterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QJsonArray__const_iterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void OperatorSubscript(int32 j)
	{
		CQt.QJsonArray__const_iterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public bool OperatorEqual(QJsonArray__const_iterator* o)
	{
		return CQt.QJsonArray__const_iterator_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(QJsonArray__const_iterator* o)
	{
		return CQt.QJsonArray__const_iterator_OperatorNotEqual(this.nativePtr, o);
	}
	
	public bool OperatorLesser(QJsonArray__const_iterator* other)
	{
		return CQt.QJsonArray__const_iterator_OperatorLesser(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqual(QJsonArray__const_iterator* other)
	{
		return CQt.QJsonArray__const_iterator_OperatorLesserOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorGreater(QJsonArray__const_iterator* other)
	{
		return CQt.QJsonArray__const_iterator_OperatorGreater(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqual(QJsonArray__const_iterator* other)
	{
		return CQt.QJsonArray__const_iterator_OperatorGreaterOrEqual(this.nativePtr, other);
	}
	
	public QJsonArray__const_iterator* OperatorPlusPlus()
	{
		return CQt.QJsonArray__const_iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QJsonArray__const_iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QJsonArray__const_iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QJsonArray__const_iterator* OperatorMinusMinus()
	{
		return CQt.QJsonArray__const_iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QJsonArray__const_iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QJsonArray__const_iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QJsonArray__const_iterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QJsonArray__const_iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QJsonArray__const_iterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QJsonArray__const_iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public QJsonArray__const_iterator OperatorPlus(int32 j)
	{
		return CQt.QJsonArray__const_iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QJsonArray__const_iterator OperatorMinus(int32 j)
	{
		return CQt.QJsonArray__const_iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQJsonArrayconstIterator(QJsonArray__const_iterator j)
	{
		return CQt.QJsonArray__const_iterator_OperatorMinusWithQJsonArrayconstIterator(this.nativePtr, j);
	}
	
}
